--- a/colors.css
+++ b/colors.css
@@ -1,6 +1,5 @@
 :root {
-    --backgroud: #20111a;
-    --text: #C6C2Ad;
+    --backgroud: #180b16;
+    --text: #ffe8d0;
     --highlight: #E9A448;
-    --accent: #96298D;
 }
